# keboola_sentinel_

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
backend/: app.py  data.py  query.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: KpiCard.jsx  LoadingSpinner.jsx  Sidebar.jsx
frontend/src/pages/: AssetInventory.jsx  ImpactAnalysis.jsx  ROIAnalysis.jsx
keboola-config/: setup.sh
keboola-config/nginx/sites/: default.conf
keboola-config/supervisord/services/: app.conf  python.conf
