[project]
name = "keboola-sentinel"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "cachetools>=5.3.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
